AP-15871: Add double converters for int and long to Type Mapping Framework
Added an int and long to double converter to the DoubleCellFactory

AP-15871 (More Java to KNIME Converters for Numeric Values)